# chatbot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.extra  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
apps/: api.py
apps/accounts/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
apps/chat/: admin.py  context.py  context_processors.py  forms.py  models.py  streaming.py  urls.py  views.py
apps/compaction/: admin.py  apps.py  models.py  services.py
apps/ingestion/: chunking.py  models.py  services.py
apps/knowledge/: admin.py  models.py  retrieval_models.py  retrievers.py  services.py  urls.py  views.py
apps/llm/: clients.py  embeddings.py  errors.py  milvus_store.py  models.py  prompts.py  reranker.py  streaming.py  token_usage.py
apps/memory/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/tools/: admin.py  apps.py  builtin.py  executor.py  models.py  permissions.py  registry.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  local.py  production.py  test.py
docker/: entrypoint.sh
docs/: API_AND_VIEWS.md  ARCHITECTURE.md  CONFIGURATION_AND_OPERATIONS.md  DATA_MODEL.md  DETAILED_DB_SCHEMA.md  FILE_STRUCTURE.md  OPEN_QUESTIONS.md  RAG_MULTIMODAL_PIPELINE.md  README.md  RUNNING.md
file_server/: server.py
media/uploads/: test_8t6w7gN.txt
mock_server/: server.py
scripts/gemma4/: Dockerfile  pyproject.toml  serve.py
scripts/llama-embed-nemotron/: Dockerfile  pyproject.toml  serve.py
templates/: base.html  base_auth.html  sidebar.html
(+56 files in other folders)
